# jira-cloud-python

./: README.md  pyproject.toml
jiracloud/: client.py  exceptions.py  issues.py  permissions.py  projects.py  users.py  webhooks.py
