[tool.poetry]
name = "jira-cloud-python"
version = "1.0.2"
description = "API wrapper for Jira Cloud written in Python"
authors = ["Gearplug Apps Team <apps@gearplug.io>"]
license = "MIT"
readme = "README.md"
packages = [{include = "jiracloud"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

